Add ../Bibimbap.webp and ../index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <h2><a href="/recipes/bibimbap.html">Bibimbap</a></h2>
+        <img src="Bibimbap.webp" alt="A bowl of already prepared bibimbap">
     </body>
 </html>
