Add index.html and bibimbap.html

--- a/index.html
+++ b/index.html
@@ -1,29 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="uft-8">
+        <meta charset="utf-8">
         <title>Recipes</title>
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <h2><a href="/recipes/bibimbap.html">Bibimbap</a></h2>
-        <img src="Bibimbap.webp" alt="A bowl of already prepared bibimbap">
-        <h3>Rice mixed with vegetables, meat, an egg, and chili pepper paste</h3>
-
-        <p>It’s made of a bowl of rice, sautéed and seasoned vegetables, a bit of hot pepper paste (gochujang), and usually a bit of seasoned raw beef, too. Bibim translates as “mixed,” and bap means “cooked rice,” so bibimbap literally means “mixed rice.” Before eating it you’re supposed to mix everything all together.</p>
-
-        <h4>Ingredients</h4>
-        <ul>
-            <li>5 cups cooked rice</li>
-            <li>12 ounces soy sprouts, washed and drained</li>
-            <li>1 large carrot</li>
-            <li>1 large red bell</li>
-            <li>1 large zucchini</li>
-            <li>1 English cucumber</li>
-            <li>8 ounces of spinach blanched and washed with the excess water squeezed out by hand.</li>
-            <li>3 to 4 green onions, chopped</li>
-        </ul>
-
+        <a href="../odin-recipes/recipes/bibimbap.html">Bibimbap</a>
     </body>
 </html>
