--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -1,1 +1,43 @@
 <h1>Bibimbap</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="uft-8">
+        <title>Recipes</title>
+    </head>
+
+    <body>
+        <h1><a href="/recipes/bibimbap.html">Bibimbap</a></h1>
+        <img src="../Bibimbap.webp" alt="A bowl of already prepared bibimbap">
+        <p>Rice mixed with vegetables, meat, an egg, and chili pepper paste</p>
+
+        <p>It’s made of a bowl of rice, sautéed and seasoned vegetables, a bit of hot pepper paste (gochujang), and usually a bit of seasoned raw beef, too. Bibim translates as “mixed,” and bap means “cooked rice,” so bibimbap literally means “mixed rice.” Before eating it you’re supposed to mix everything all together.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>5 cups cooked rice</li>
+            <li>12 ounces soy sprouts, washed and drained</li>
+            <li>1 large carrot</li>
+            <li>1 large red bell</li>
+            <li>1 large zucchini</li>
+            <li>1 English cucumber</li>
+            <li>8 ounces of spinach blanched and washed with the excess water squeezed out by hand.</li>
+            <li>3 to 4 green onions, chopped</li>
+            <li>1/2 pound fresh lean cut of beef (fillet mignon, flank steak)</li>
+            <li>4 ounces fernbrake (gosari), fresh or soaked from 1/2 ounce dried gosari (details below)</li>
+            <li> 1 ounce dried bellflower roots (doraji) soaked in cold water for 18 to 24 hours.</li>
+            <li>4 eggs</li>
+            <li>kosher salt</li>
+            <li>vegetable oil</li>
+            <li>toasted sesame oil</li>
+            <li>toasted sesame seeds</li>
+            <li>garlic</li>
+            <li>soy sauce</li>
+            <li>honey (or sugar)</li>
+            <li>Korean hot pepper paste (gouchujang)</li>
+        </ul>
+
+        <h3>Steps</h3>
+
+    </body>
+</html>
