Add index.html and recipes/bibimbap.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="../odin-recipes/recipes/bibimbap.html">Bibimbap</a>
+        <ul>
+            <li><a href="../odin-recipes/recipes/bibimbap.html">Bibimbap</a></li>
+            <li><a href="../odin-recipes/recipes/puffpuff.html">PuffPuff</a></li>
+            <li><a href="../odin-recipes/recipes/tigernut.html">Tigernut Drink</a></li>
+        </ul>
     </body>
 </html>
