--- a/recipes/bibimbap.html
+++ b/recipes/bibimbap.html
@@ -3,11 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="uft-8">
-        <title>Recipes</title>
+        <title>Bibimbap recipe</title>
     </head>
 
     <body>
-        <h1><a href="/recipes/bibimbap.html">Bibimbap</a></h1>
         <img src="../Bibimbap.webp" alt="A bowl of already prepared bibimbap">
         <p>Rice mixed with vegetables, meat, an egg, and chili pepper paste</p>
 
