--- a/recipes/tigernut.html
+++ b/recipes/tigernut.html
@@ -6,7 +6,21 @@
     </head>
 
     <body>
-        <img src="../TigernutDRink.jpeg">
-        <p></p>
+        <img src="../Tigernutdrink.jpeg">
+        <p>Tiger nut milk drink is an easy to make drink that is also vegan friendly. While the name does include nut, its actually a tiny root vegetable.</p>
+        <h1>Ingredients</h1>
+        <ul>
+            <li>Peeled tiger nut</li>
+            <li>Water</li>
+        </ul>
+        <p>You'll also need a cheesecloth or other alternative to strain it and a pinch of salt.</p>
+        <h2>Step</h2>
+        <ol>
+            <li>You start by soaking the Tiger nuts overnight with a pinch of salt. This helps to soften them and reduce anti-nutrients</li>
+            <li>Rinse them and blend with fresh, filtered water</li>
+            <li>Once blended, it will look frothy, creamy and a lot like almond milk. Just like homemade almond milk, you need to use a nut milk bag to strain your tiger nut milk.</li>
+            <li>Pour your blended tiger nut milk through a cheesecloth and squeeze into a large bowl.</li>
+            <li>Pour in desired storage container. Store in the fridge.</li>
+        </ol>
     </body>
 </html>
