--- a/recipes/puffpuff.html
+++ b/recipes/puffpuff.html
@@ -7,6 +7,27 @@
 
     <body>
         <img src="../Puffpuff.jpeg">
-        <p></p>
+        <p>Puff puff is a deep-fried dough. They are made from yeast dough, shaped into balls and deep-fried until golden brown. It has a doughnut-like texture but slightly more chewy. It is a very common snack eaten by so many countries but with different names and a little bit of variation in the mode of preparation.</p>
+        <h1>Ingredients</h1>
+        <ul>
+            <li>2 cups flour</li>
+            <li>11/4 cups Water</li>
+            <li>2 tsp yeast</li>
+            <li>2 tsp nutmeg</li>
+            <li>1/2 tsp salt</li>
+            <li>1/4 cup sugar (plus an extra teaspoon for poofing the yeast)</li>
+            <li>Enough oil for deep frying</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Mix half of a cup of warm water, 1 teaspoon of sugar and the yeast in a bowl. Cover with a lid and set aside until the yeast becomes bubbly. About 4-6 minutes.</li>
+            <li>In another bowl, mix the dry ingredients - Flour, Sugar, Salt, and Nutmeg.</li>
+            <li>Pour the proofed yeast and the remainng one cup water together with the dry ingredients and mix until the batter is lump-free.</li>
+            <li>Cover the dough and allow it to rise for 1 hour. (The risen dough has a distinct sweet smell, which will make you know the dough is ready for frying)</li>
+            <li>Preheat the oil in a pan deep and wide enough to accomodate the puff puff balls (about 360°F ) and scoop a little bit of dough and drop the batter by spoonfuls into the oil.</li>
+            <li>Fry both sides until golden brown. If you are finding it hard to turn the puff puff while frying you can just press down the balls a little bit with your frying spoon before turning it.</li>
+            <li>Remove from heat. Drain on a paper towel and enjoy while still hot or warm.</li>
+        </ol>
     </body>
+    <footer>This recipe was copied from <a href="https://cheflolaskitchen.com/african-puff-puff/">Chef Lolas Kitchen</a></footer>
 </html>
