--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>Odin Recipes</h1>
         <p>These are recipes of some things I enjoy eating.</p>
         <ul>
-            <li><a href="../odin-recipes/recipes/bibimbap.html"></a></li>
+            <li><a href="../odin-recipes/recipes/plantainfrittata.html">Plantain Frittata</a></li>
             <li><a href="../odin-recipes/recipes/puffpuff.html">PuffPuff</a></li>
             <li><a href="../odin-recipes/recipes/tigernut.html">Tigernut Drink</a></li>
         </ul>
