Add plantainfrittata.html tigernut.html and puffpuff.html

--- a/recipes/plantainfrittata.html
+++ b/recipes/plantainfrittata.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <img src="../ptt.jpeg">
+        <img src="../ptt.jpeg" alt="An image of already-made Plantain Frittata.">
         <p> Plantain Frittata is a breakfast made of eggs and plantain slightly cooked together, usually you have to steam the eggs with fried plantain laid on top of it.</p>
         <h1>Ingredients</h1>
         <ul>
