--- a/recipes/puffpuff.html
+++ b/recipes/puffpuff.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <img src="../Puffpuff.jpeg">
+        <img src="../Puffpuff.jpeg" alt="A bowl of fried Puff puff.">
         <p>Puff puff is a deep-fried dough. They are made from yeast dough, shaped into balls and deep-fried until golden brown. It has a doughnut-like texture but slightly more chewy. It is a very common snack eaten by so many countries but with different names and a little bit of variation in the mode of preparation.</p>
         <h1>Ingredients</h1>
         <ul>
