--- a/recipes/tigernut.html
+++ b/recipes/tigernut.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <img src="../Tigernutdrink.jpeg">
+        <img src="../Tigernutdrink.jpeg" alt="An image of tiger nut in a jar.">
         <p>Tiger nut milk drink is an easy to make drink that is also vegan friendly. While the name does include nut, its actually a tiny root vegetable.</p>
         <h1>Ingredients</h1>
         <ul>
